# yocto-skd-minimal

./: CMakeLists.txt
src/: CMakeLists.txt  calculate.cpp  main.cpp
